<resources>
    <string name="app_name">Madopskrifter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forside">Forside</string>
    <string name="opretOpskrift">Opret Opskrift</string>
    <string name="indstillinger">Indstillinger</string>
    <string name="hjaelp">Hjælp</string>
    <string name="tilfoej_billede">Tilføj billede</string>
    <string name="tilfoej_tekst">Tilføj tekst</string>
    <string name="tilfoej_billede_tryk">Tryk for at tilføje et billede</string>
    <string name="titel_opskrift">Titel på opskrift</string>
    <string name="naeste">Næste</string>
    <string name="tilbage">Tilbage</string>
    <string name="vaelghovedbillede">Vælg hovedbillede og titel</string>
</resources>
